add NB from sklearn

--- a/NB.ipynb
+++ b/NB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
     "    #return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\d?\\d.?st)|(\\d?\\d.?nd)|(\\d?\\d.?rd)|(\\d?\\d.?th)', ' §d ', text.lower()))\n",
     "\n",
     "    #return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\d?\\d.?st)|(\\d?\\d.?nd)|(\\d?\\d.?rd)|(\\d?\\d.?th)', ' §d ', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))\n",
-    "    return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(0\\d{10})', ' §p ',re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))\n",
-    "    #return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\d?\\d.?st)|(\\d?\\d.?nd)|(\\d?\\d.?rd)|(\\d?\\d.?th)', ' §d ', re.sub(r'\\d', ' §n ', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(0\\d{10})', ' §p ',re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))))\n"
+    "    #return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(0\\d{10})', ' §p ',re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))\n",
+    "    return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\d?\\d.?st)|(\\d?\\d.?nd)|(\\d?\\d.?rd)|(\\d?\\d.?th)', ' §d ', re.sub(r'\\d', ' §n ', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(0\\d{10})', ' §p ',re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))))\n"
    ]
   },
   {
@@ -30,16 +30,18 @@
    "metadata": {},
    "source": [
     "Разные комбинации регулярных выражений (в том же порядке, что и в коде) дают разные результаты на 5-fold validation с roc auc\n",
-    "1. 0.5477\n",
-    "2. 0.5003\n",
-    "3. 0.5551\n",
-    "4. 0.5477\n",
-    "5. 0.5513\n",
-    "6. 0.5581\n",
-    "7. 0.4939\n",
+    "1. 0.5477 (0.9372)\n",
+    "2. 0.5003 (0.9298)\n",
+    "3. 0.5551 (0.9357)\n",
+    "4. 0.5477 (0.9372)\n",
+    "5. 0.5513 (0.9345)\n",
+    "6. 0.5581 (0.9360)\n",
+    "7. 0.4939 (0.9470)\n",
     "\n",
-    "Видим, что 6 вариант оптимален, его и будем использовать.\n",
-    "Это фильтрация почт, телефонов и сайтов"
+    "Значения в начале - для анализа отдельных слов, в скобках - для словосочетаний\n",
+    "\n",
+    "Видим, что 7 вариант оптимален, его и будем использовать.\n",
+    "Это фильтрация почт, телефонов, сайтов, дат и цифр"
    ]
   },
   {
@@ -112,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Выполняется последним и меняет оставшиеся в тексте цифры на спецсимвол"
+    "Выполняется далее и меняет оставшиеся в тексте цифры на спецсимвол"
    ]
   },
   {
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,6 +259,7 @@
     "                                                                                 # из одной категории в один общий\n",
     "            text = text.split(' ')\n",
     "            text = list(tuple(zip([''] + text, text)))\n",
+    "            #text = list(tuple(zip([''] + [''] + text, [''] + text, text)))\n",
     "        # в text собираются тела/заголовки документов, отмеченных темой i\n",
     "        # ----------------------------------------\n",
     "            if len(text) == 0:\n",
@@ -277,7 +280,9 @@
     "        v = set()\n",
     "        [v.update(set(x)) for x in self.c.values()]\n",
     "        w = list()\n",
-    "        for i in list(tuple(zip([''] + body, body))):\n",
+    "        got_text = list(tuple(zip([''] + body, body)))\n",
+    "        #got_text = list(tuple(zip([''] + [''] + text, [''] + text, text)))\n",
+    "        for i in got_text:\n",
     "            if i in v:\n",
     "                w.append(i)\n",
     "        score = dict()\n",
@@ -299,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -339,15 +344,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E: 0.978111922454533\n",
-      "+/-: 0.0031946394666556603\n"
+      "E: 0.9813422321694535\n",
+      "+/-: 0.0027420732982051796\n"
      ]
     }
    ],
@@ -365,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -403,15 +408,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E: 0.9359806290295435\n",
-      "+/-: 0.004130083111350103\n"
+      "E: 0.9470261415091349\n",
+      "+/-: 0.007136154443564596\n"
      ]
     }
    ],
@@ -421,89 +426,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "x_ = 'aфыврвлр юлпюл дшрщшщ'"
+    "Использование словосочетаний вместо отдельных слов позволило увеличить точность с 55% до 94%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для сравнения запустим Байесовский классификатор из sklearn. Рассмотрим также ___roc auc - меру___ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vect = CountVectorizer()\n",
+    "collection_txt2 = vect.fit_transform(collection_txt)\n",
+    "\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "clfsk = MultinomialNB()\n",
+    "\n",
+    "scores = cross_val_score(clfsk, collection_txt2,collection_spam,scoring = 'roc_auc',cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('aфыврвлр', 'юлпюл'), ('юлпюл', 'aфыврвлр')]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E: 0.9780678472547855\n",
+      "+/-: 0.010415535712565515\n"
+     ]
     }
    ],
    "source": [
-    "words = x_.split(' ')\n",
-    "list(zip([v for k,v in enumerate(words) if not k%2], [v for k,v in enumerate(words) if k%2]))+list(zip([v for k,v in enumerate(words) if k%2], [v for k,v in enumerate(words) if not k%2]))"
+    "print('E: ' + str(scores.mean()))\n",
+    "print('+/-: '+ str(scores.std()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "И для сравнения _accuracy_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = cross_val_score(clfsk, collection_txt2,collection_spam,scoring = 'accuracy',cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('', 'aфыврвлр'), ('aфыврвлр', 'юлпюл'), ('юлпюл', 'дшрщшщ')]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E: 0.9741633044407122\n",
+      "+/-: 0.0031470785675313745\n"
+     ]
     }
    ],
    "source": [
-    "list(tuple(zip([''] + words, words)))"
+    "print('E: ' + str(scores.mean()))\n",
+    "print('+/-: '+ str(scores.std()))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "__ВЫВОД:__ написанный собственноручно метод уступает на 3% аналогу из библиотеки по roc-auc метрике, а по accuracy даже немного превосходит"
+   ]
   }
  ],
  "metadata": {
