--- a/NB.ipynb
+++ b/NB.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "    #return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\d?\\d.?st)|(\\d?\\d.?nd)|(\\d?\\d.?rd)|(\\d?\\d.?th)', ' §d ', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))\n",
     "    #return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(0\\d{10})', ' §p ',re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))\n",
-    "    return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'(\\d?\\d.?st)|(\\d?\\d.?nd)|(\\d?\\d.?rd)|(\\d?\\d.?th)', ' §d ', re.sub(r'\\d', ' §n ', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(0\\d{10})', ' §p ',re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))))\n"
+    "    return re.sub(r'[^a-z §p§m§w§n§d]', '', re.sub(r'\\d', ' §n ',re.sub(r'(\\d?\\d.?st)|(\\d?\\d.?nd)|(\\d?\\d.?rd)|(\\d?\\d.?th)', ' §d ', re.sub(r'(\\S+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(www.+\\.(\\w{2,3})\\S+)|(wap.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(htt.+\\.(\\w{2,3})\\S+)', ' §w ', re.sub(r'(0\\d{10})', ' §p ',re.sub(r'(\\w+)@(\\w+)\\.(\\w{2,3})', ' §m ', text.lower()))))))))\n"
    ]
   },
   {
@@ -351,8 +351,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E: 0.9813422321694535\n",
-      "+/-: 0.0027420732982051796\n"
+      "E: 0.981521604366763\n",
+      "+/-: 0.00257277684583844\n"
      ]
     }
    ],
@@ -415,8 +415,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E: 0.9470261415091349\n",
-      "+/-: 0.007136154443564596\n"
+      "E: 0.947131738130043\n",
+      "+/-: 0.007083365110202644\n"
      ]
     }
    ],
@@ -466,8 +466,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E: 0.9780678472547855\n",
-      "+/-: 0.010415535712565515\n"
+      "E: 0.9781327409873836\n",
+      "+/-: 0.010434947385387203\n"
      ]
     }
    ],
@@ -501,8 +501,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E: 0.9741633044407122\n",
-      "+/-: 0.0031470785675313745\n"
+      "E: 0.9745220491238907\n",
+      "+/-: 0.0030539424212447422\n"
      ]
     }
    ],
